samples/_failures_safe/1761426251_1e55f6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d61de5a4.c: In function ‘display_entries_by_level’:
./samples/SAFE/__tmp_d61de5a4.c:144:20: error: missing terminating " character
  144 |             printf("%
      |                    ^~
./samples/SAFE/__tmp_d61de5a4.c:144:13: error: expected expression at end of input
  144 |             printf("%
      |             ^~~~~~
./samples/SAFE/__tmp_d61de5a4.c:144:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d61de5a4.c:144:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d61de5a4.c:144:13: error: expected declaration or statement at end of input
